// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render ratio panel with no columns matches snapshot 1`] = `
<div>
  <div
    class="rollup-ratio-panel"
  >
    <div
      class="bp3-callout"
    >
      <p>
        You may select any column to exclude them from your rollup preview. This will update
              your rollup ratio after you click on "Estimate rollup".
      </p>
      <p>
        Please click on "Preview data" after modifying your interval.
      </p>
      <p />
    </div>
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        Interval
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            placeholder="2019-01-01/2020-01-01"
            style="padding-right: 0px;"
            type="text"
            value="2009-01-01/2020-01-01"
          />
          <span
            class="bp3-input-action"
          >
            <div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-calendar"
                      icon="calendar"
                    >
                      <svg
                        data-icon="calendar"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          calendar
                        </desc>
                        <path
                          d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Preview data
      </span>
    </button>
  </div>
  <div
    class="rollup-ratio-submit"
  >
    <div
      class="bp3-callout"
    >
      <p>
        Estimated rollup ratio: 
        
      </p>
    </div>
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        Granularity:
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            readonly=""
            style="padding-right: 0px;"
            type="text"
            value="NONE"
          />
          <span
            class="bp3-input-action"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button bp3-intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Estimate rollup
      </span>
    </button>
  </div>
</div>
`;

exports[`render ratio panel with no rollup matches snapshot 1`] = `
<div>
  <div
    class="rollup-ratio-panel"
  >
    <div
      class="bp3-callout"
    >
      <p>
        You may select any column to exclude them from your rollup preview. This will update
              your rollup ratio after you click on "Estimate rollup".
      </p>
      <p>
        Please click on "Preview data" after modifying your interval.
      </p>
      <p />
    </div>
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        Interval
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            placeholder="2019-01-01/2020-01-01"
            style="padding-right: 0px;"
            type="text"
            value="2009-01-01/2020-01-01"
          />
          <span
            class="bp3-input-action"
          >
            <div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-calendar"
                      icon="calendar"
                    >
                      <svg
                        data-icon="calendar"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          calendar
                        </desc>
                        <path
                          d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Preview data
      </span>
    </button>
  </div>
  <div
    class="rollup-ratio-submit"
  >
    <div
      class="bp3-callout"
    >
      <p>
        Estimated rollup ratio: 
        
      </p>
    </div>
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        Granularity:
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            readonly=""
            style="padding-right: 0px;"
            type="text"
            value="NONE"
          />
          <span
            class="bp3-input-action"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button bp3-intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Estimate rollup
      </span>
    </button>
  </div>
</div>
`;

exports[`render ratio panel with no rollup matches snapshot 2`] = `
<div>
  <div
    class="rollup-ratio-panel"
  >
    <div
      class="bp3-callout"
    >
      <p>
        You may select any column to exclude them from your rollup preview. This will update
              your rollup ratio after you click on "Estimate rollup".
      </p>
      <p>
        Please click on "Preview data" after modifying your interval.
      </p>
      <p>
        This datasource has previously been rolled up. The original rollup ratio is 100.00%
      </p>
    </div>
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        Interval
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            placeholder="2019-01-01/2020-01-01"
            style="padding-right: 0px;"
            type="text"
            value="2009-01-01/2020-01-01"
          />
          <span
            class="bp3-input-action"
          >
            <div>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="bp3-button"
                    type="button"
                  >
                    <span
                      class="bp3-icon bp3-icon-calendar"
                      icon="calendar"
                    >
                      <svg
                        data-icon="calendar"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          calendar
                        </desc>
                        <path
                          d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Preview data
      </span>
    </button>
  </div>
  <div
    class="rollup-ratio-submit"
  >
    <div
      class="bp3-callout"
    >
      <p>
        Estimated rollup ratio: 
        
      </p>
    </div>
    <div
      class="bp3-form-group"
    >
      <label
        class="bp3-label"
      >
        Granularity:
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            readonly=""
            style="padding-right: 0px;"
            type="text"
            value="NONE"
          />
          <span
            class="bp3-input-action"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button bp3-minimal"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-caret-down"
                    icon="caret-down"
                  >
                    <svg
                      data-icon="caret-down"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        caret-down
                      </desc>
                      <path
                        d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <button
      class="bp3-button bp3-intent-primary"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Estimate rollup
      </span>
    </button>
  </div>
</div>
`;
